--- a/frontend/src/components/CategoriesManager/CategoryActions/Actions/MoveCategory.module.css
+++ b/frontend/src/components/CategoriesManager/CategoryActions/Actions/MoveCategory.module.css
@@ -37,7 +37,24 @@
 .current {
   color: #aaa;
   cursor: not-allowed;
-  background-color: #eee;
+  background-color: grey;
+}
+
+.disabled {
+  background-color: #cccccc;
+  color: #666;
+  cursor: not-allowed;
+}
+
+/* Move Button Styling */
+.activeButton {
+  background-color: #4caf50;
+  color: #fff;
+  padding: 0.75rem 1.5rem;
+  border: none;
+  border-radius: 6px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
 }
 
 .submitButton {
@@ -48,6 +65,18 @@
   border-radius: 8px;
   cursor: pointer;
   margin-right: 1rem;
+}
+s .activeButton:hover {
+  background-color: #45a049;
+}
+
+.disabledButton {
+  background-color: #cccccc;
+  color: #666;
+  padding: 0.75rem 1.5rem;
+  border: none;
+  border-radius: 6px;
+  cursor: not-allowed;
 }
 
 .cancelButton {
